; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_time.c_get_jiffies_64.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_time.c_get_jiffies_64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xtime_lock = common dso_local global i32 0, align 4
@jiffies_64 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_jiffies_64() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %6, %0
  %4 = call i64 @read_seqbegin(i32* @xtime_lock)
  store i64 %4, i64* %1, align 8
  %5 = load i32, i32* @jiffies_64, align 4
  store i32 %5, i32* %2, align 4
  br label %6

6:                                                ; preds = %3
  %7 = load i64, i64* %1, align 8
  %8 = call i64 @read_seqretry(i32* @xtime_lock, i64 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %3, label %10

10:                                               ; preds = %6
  %11 = load i32, i32* %2, align 4
  ret i32 %11
}

declare dso_local i64 @read_seqbegin(i32*) #1

declare dso_local i64 @read_seqretry(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
